# devdocs-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  LEARNING_LOG.md  LICENSE  README.md  pyproject.toml
docker/: .env.example  docker-compose.yml
docker/pgadmin/: servers.json
scripts/: verify.py
